--- a/odoo14/pantaq/wizard/wizard_view.xml
+++ b/odoo14/pantaq/wizard/wizard_view.xml
@@ -36,7 +36,7 @@
                         <notebook>
                             <page string="Suppliers">
                                 <label for="partner_ids" string="Set Supplier here to send RFQ for all the products." colspan="4"/>
-                                <field name="partner_ids" context="{'search_default_is_company':1, 'default_is_company':1, 'default_customer':0}">
+                                <field name="partner_ids" context="{'search_default_supplier':1, 'default_supplier':1, 'default_customer':0, 'show_address': 1}">
                                     <tree create="false">
                                         <field name="name"/>
                                         <field name="phone"/>
