--- a/odoo14/pantaq_receive_qc/views/purchase_order.xml
+++ b/odoo14/pantaq_receive_qc/views/purchase_order.xml
@@ -8,8 +8,8 @@
                 <xpath expr="//header" position="inside">
                     <field name="asn_done" invisible="1"/>
                     <field name="po_type" invisible="1"/>
-                    <button name="create_asn" string="Create ASN" type="object" class="oe_highlight"
-                            attrs="{'invisible': ['|',('asn_done','=',True),('po_type','=','rfq')]}"/>
+<!--                    <button name="create_asn" string="Create ASN" type="object" class="oe_highlight"-->
+<!--                            attrs="{'invisible': ['|',('asn_done','=',True),('po_type','=','rfq')]}"/>-->
                 </xpath>
                 <xpath expr="//field[@name='currency_id']" position="after">
                     <field name="rfq_ref" string="RFQ Reference" attrs="{'invisible':[('rfq_ref','=',False)]}"/>
