--- a/odoo14/pantaq_receive_qc/views/stock_picking.xml
+++ b/odoo14/pantaq_receive_qc/views/stock_picking.xml
@@ -42,6 +42,12 @@
                         role="img" title="Assign Serial Numbers"
                         attrs="{'invisible': ['|', '|', ('display_assign_serial', '=', False), ('show_operations', '=', False),('scrapped','=',True)]}"/>
             </xpath>
+
+            <xpath expr="/form/sheet/notebook/page/field[@name='move_ids_without_package']" position="replace">
+                <field name="move_line_ids_without_package"
+                       attrs="{'readonly': ['|', '|', '|',('show_operations', '=', False), ('state', '=', 'cancel'), '&amp;', ('state', '=', 'done'), ('is_locked', '=', True),('parent.name', 'ilike', 'QC')]}"
+                       context="{'tree_view_ref': 'stock.view_stock_move_line_detailed_operation_tree', 'default_picking_id': id, 'default_location_id': location_id, 'default_location_dest_id': location_dest_id, 'default_company_id': company_id}"/>
+            </xpath>
         </field>
     </record>
     <record id="pq_stock_scrap_form_view_inherit" model="ir.ui.view">
@@ -59,19 +65,19 @@
         </field>
     </record>
 
-<!--    <record id="pq_stock_return_picking_inherit" model="ir.ui.view">-->
-<!--        <field name="name">pq.stock.return.picking.inherit.form</field>-->
-<!--        <field name="inherit_id" ref="stock.view_stock_return_picking_form"/>-->
-<!--        <field name="model">stock.return.picking</field>-->
-<!--        <field name="arch" type="xml">-->
-<!--            <xpath expr="//field[@name='product_return_moves']/tree" position="inside">-->
-<!--                <field name="lot_id" domain="[('id', 'in', self.product_return_moves.move_id.move_line_ids.lot_ids)]"/>-->
-<!--&lt;!&ndash;                       context="{'default_product_id': product_id, 'default_company_id': company_id}"&ndash;&gt;-->
-<!--&lt;!&ndash;                       attrs="{'invisible': ['|',('product_id', '=', False),('tracking', '=', 'none')], 'required': [('tracking', '!=', 'none')]}"&ndash;&gt;-->
-<!--&lt;!&ndash;                       groups="stock.group_production_lot"/>/>&ndash;&gt;-->
-<!--            </xpath>-->
-<!--        </field>-->
-<!--    </record>-->
+    <!--    <record id="pq_stock_return_picking_inherit" model="ir.ui.view">-->
+    <!--        <field name="name">pq.stock.return.picking.inherit.form</field>-->
+    <!--        <field name="inherit_id" ref="stock.view_stock_return_picking_form"/>-->
+    <!--        <field name="model">stock.return.picking</field>-->
+    <!--        <field name="arch" type="xml">-->
+    <!--            <xpath expr="//field[@name='product_return_moves']/tree" position="inside">-->
+    <!--                <field name="lot_id" domain="[('id', 'in', self.product_return_moves.move_id.move_line_ids.lot_ids)]"/>-->
+    <!--&lt;!&ndash;                       context="{'default_product_id': product_id, 'default_company_id': company_id}"&ndash;&gt;-->
+    <!--&lt;!&ndash;                       attrs="{'invisible': ['|',('product_id', '=', False),('tracking', '=', 'none')], 'required': [('tracking', '!=', 'none')]}"&ndash;&gt;-->
+    <!--&lt;!&ndash;                       groups="stock.group_production_lot"/>/>&ndash;&gt;-->
+    <!--            </xpath>-->
+    <!--        </field>-->
+    <!--    </record>-->
 </odoo>
 
 
