--- a/odoo14/pantaq_quality_check_stock/views/qc_inspection_view.xml
+++ b/odoo14/pantaq_quality_check_stock/views/qc_inspection_view.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<!-- Copyright 2018 Simone Rubino - Agile Business Group
-     License AGPL-3.0 or later (https://www.gnu.org/licenses/agpl). -->
+
 <odoo>
     <record model="ir.ui.view" id="qc_inspection_form_view_picking">
         <field name="name">qc.inspection.form.view.picking</field>
         <field name="model">qc.inspection</field>
-        <field name="inherit_id" ref="quality_control_oca.qc_inspection_form_view" />
+        <field name="inherit_id" ref="pantaq_quality_control.qc_inspection_form_view" />
         <field name="arch" type="xml">
             <field name="product_id" position="after">
                 <field name="picking_id" />
@@ -16,7 +15,7 @@
     <record model="ir.ui.view" id="qc_inspection_tree_view_picking">
         <field name="name">qc.inspection.tree.view.picking</field>
         <field name="model">qc.inspection</field>
-        <field name="inherit_id" ref="quality_control_oca.qc_inspection_tree_view" />
+        <field name="inherit_id" ref="pantaq_quality_control.qc_inspection_tree_view" />
         <field name="arch" type="xml">
             <field name="product_id" position="after">
                 <field name="picking_id" />
@@ -27,7 +26,7 @@
     <record model="ir.ui.view" id="qc_inspection_search_view_picking">
         <field name="name">qc.inspection.search.view.picking</field>
         <field name="model">qc.inspection</field>
-        <field name="inherit_id" ref="quality_control_oca.qc_inspection_search_view" />
+        <field name="inherit_id" ref="pantaq_quality_control.qc_inspection_search_view" />
         <field name="arch" type="xml">
             <field name="product_id" position="after">
                 <field name="picking_id" />
@@ -55,7 +54,7 @@
         <field name="model">qc.inspection.line</field>
         <field
             name="inherit_id"
-            ref="quality_control_oca.qc_inspection_line_tree_view"
+            ref="pantaq_quality_control.qc_inspection_line_tree_view"
         />
         <field name="arch" type="xml">
             <field name="product_id" position="after">
@@ -69,7 +68,7 @@
         <field name="model">qc.inspection.line</field>
         <field
             name="inherit_id"
-            ref="quality_control_oca.qc_inspection_line_search_view"
+            ref="pantaq_quality_control.qc_inspection_line_search_view"
         />
         <field name="arch" type="xml">
             <field name="product_id" position="after">
