--- a/odoo14/pantaq/views/internal_quotation_view.xml
+++ b/odoo14/pantaq/views/internal_quotation_view.xml
@@ -153,7 +153,7 @@
                     <notebook>
                         <page string="Quotation Lines">
                             <field name="order_line" mode="tree,kanban"
-                                attrs="{'readonly': [('state', 'in', ('done','cancel'))]}">
+                                attrs="{'readonly': [('state', 'in', ('done','cancel','revised'))]}">
                                 <form string="Quotation Lines">
                                     <group>
                                         <group>
@@ -414,7 +414,7 @@
                                 groups="sales_team.group_sale_salesman">
                             <div class="o_stat_info">
                                 <field name="intord2_count" class="o_stat_value"/>
-                                <span class="o_stat_text"> Internal Qtn(s) </span>
+                                <span class="o_stat_text"> IQ Confirmed </span>
                             </div>
                         </button>
                     </div>
