--- a/odoo14/pantaq_asn/views/purchase_order_shipment.xml
+++ b/odoo14/pantaq_asn/views/purchase_order_shipment.xml
@@ -6,46 +6,56 @@
             <field name="arch" type="xml">
                 <form string="Purchase Order Shipments">
                     <header>
-                        <button name="button_confirm" type="object" states='draft' string="Confirm" class="oe_highlight" groups="purchase.group_purchase_manager" />
-                        <button name="button_cancel" type="object" states="confirm" string="Cancel" groups="purchase.group_purchase_manager" />
-                        <field name="state" widget="statusbar" readonly="1" />
+                        <button name="button_confirm" type="object" states='draft' string="Confirm" class="oe_highlight"
+                                groups="purchase.group_purchase_manager"/>
+                        <button name="button_cancel" type="object" states="confirm" string="Cancel"
+                                groups="purchase.group_purchase_manager"/>
+                        <field name="state" widget="statusbar" readonly="1"/>
                     </header>
                     <sheet>
                         <div class="oe_title">
                             <h1>
-                                <field name="name" readonly="1" />
+                                <field name="name" readonly="1"/>
                             </h1>
                         </div>
+                        <widget name="web_ribbon" title="Transfered"
+                                attrs="{'invisible': [('state', '!=', 'done')]}" bg_color="bg-success"/>
+
+                        <widget name="web_ribbon" title="Cancelled"
+                                attrs="{'invisible': [('state', '!=', 'cancel')]}" bg_color="bg-danger"/>
                         <group>
                             <group>
-                                <field name="partner_id" widget="res_partner_many2one" />
-                                <field name="purchase_id" attrs="{'readonly': [('state', '!=', 'draft')]}" force_save="1" />
-                                <field name="date_order" />
-                                <field name="date_approve" />
-                                <field name="company_id" groups="base.group_multi_company" options="{'no_create': True}" />
+                                <field name="partner_id" widget="res_partner_many2one"/>
+                                <field name="purchase_id" attrs="{'readonly': [('state', '!=', 'draft')]}"
+                                       force_save="1"/>
+                                <field name="date_order"/>
+                                <field name="date_approve"/>
+                                <field name="company_id" groups="base.group_multi_company"
+                                       options="{'no_create': True}"/>
                             </group>
                             <group>
-                                <field name="shipment_date" attrs="{'readonly': [('state', '!=', 'draft')]}" />
-                                <field name="scheduled_arrival" attrs="{'readonly': [('state', '!=', 'draft')]}" />
+                                <field name="shipment_date" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
+                                <field name="scheduled_arrival" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
 
-                                <field name="container_no" attrs="{'readonly': [('state', '!=', 'draft')]}" />
-                                <field name="forwarder_no" attrs="{'readonly': [('state', '!=', 'draft')]}" />
+                                <field name="container_no" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
+                                <field name="forwarder_no" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
 
                             </group>
                         </group>
                         <notebook>
                             <page string="Products">
-                                <field name="shipment_lines" attrs="{'readonly': [('state', '!=', 'draft')]}" widget="section_and_note_one2many" mode="tree">
+                                <field name="shipment_lines" attrs="{'readonly': [('state', '!=', 'draft')]}"
+                                       widget="section_and_note_one2many" mode="tree">
 
-                                    <tree create="false" string="Shipment Order Lines" editable="bottom">
-                                        <field name="shipment_id" invisible="1" />
-                                        <field name="product_id" readonly='1' force_save="1" />
-                                        <field name="product_uom" invisible='1' force_save="1" />
-                                        <field name="product_qty" readonly='1' force_save="1" />
-                                        <field name="qty_received" readonly='1' force_save="1" />
-                                        <field name="remaining_qty" readonly='1' force_save="1" />
+                                    <tree create="false" decoration-muted="parent.state in ('done','cancel')" string="Shipment Order Lines" editable="bottom">
+                                        <field name="shipment_id" invisible="1"/>
+                                        <field name="product_id" readonly='1' force_save="1"/>
+                                        <field name="product_uom" invisible='1' force_save="1"/>
+                                        <field name="product_qty" readonly='1' force_save="1"/>
+                                        <field name="qty_received" readonly='1' force_save="1"/>
+                                        <field name="remaining_qty" readonly='1' force_save="1"/>
 
-                                        <field name="shipment_qty_received" required='1' force_save="1" />
+                                        <field name="shipment_qty_received" required='1' force_save="1"/>
 
                                     </tree>
                                 </field>
@@ -53,9 +63,9 @@
                         </notebook>
                     </sheet>
                     <div class="oe_chatter">
-                        <field name="message_follower_ids" widget="mail_followers" />
-                        <field name="activity_ids" widget="mail_activity" />
-                        <field name="message_ids" widget="mail_thread" />
+                        <field name="message_follower_ids" widget="mail_followers"/>
+                        <field name="activity_ids" widget="mail_activity"/>
+                        <field name="message_ids" widget="mail_thread"/>
                     </div>
                 </form>
             </field>
@@ -66,21 +76,22 @@
             <field name="name">purchase.order.shipment.view.tree</field>
             <field name="model">purchase.order.shipment</field>
             <field name="arch" type="xml">
-                <tree decoration-danger="state == 'cancel'" decoration-success="state == 'done'" string="Purchase Order Shipments">
-                    <field name="name" string="Ref" readonly="1" />
+                <tree decoration-danger="state == 'cancel'" decoration-success="state == 'done'"
+                      decoration-info="state == 'confirm'" string="Purchase Order Shipments">
+                    <field name="name" string="Ref" readonly="1"/>
 
-                    <field name="purchase_id" />
-                    <field name="company_id" />
+                    <field name="purchase_id"/>
+                    <field name="company_id"/>
 
-                    <field name="partner_id" />
-                    <field name="date_approve" />
+                    <field name="partner_id"/>
+                    <field name="date_approve"/>
 
 
-                    <field name="scheduled_arrival" />
-                    <field name="shipment_date" />
-                    <field name="container_no" />
-                    <field name="forwarder_no" />
-                    <field name="state" />
+                    <field name="scheduled_arrival"/>
+                    <field name="shipment_date"/>
+                    <field name="container_no"/>
+                    <field name="forwarder_no"/>
+                    <field name="state"/>
                 </tree>
             </field>
         </record>
@@ -91,19 +102,21 @@
             <field name="model">purchase.order.shipment</field>
             <field name="arch" type="xml">
                 <search string="Search Purchase Shipment">
-                    <field name="name" />
-                    <field name="partner_id" />
-                    <field name="purchase_id" />
-                    <separator />
-                    <filter name="draft" string="Draft" domain="[('state', '=', 'draft')]" />
-                    <filter name="confirm" string="Confirmed" domain="[('state', '=', 'confirm')]" />
-                    <filter name="to_approve" string="Locked/Transfered" domain="[('state', '=', 'done')]" />
-                    <separator />
+                    <field name="name"/>
+                    <field name="partner_id"/>
+                    <field name="purchase_id"/>
+                    <separator/>
+                    <filter name="draft" string="Draft" domain="[('state', '=', 'draft')]"/>
+                    <filter name="confirm" string="Confirmed" domain="[('state', '=', 'confirm')]"/>
+                    <filter name="to_approve" string="Locked/Transfered" domain="[('state', '=', 'done')]"/>
+                    <separator/>
                     <group expand="0" string="Group By">
-                        <filter string="Container" name="Container" domain="[]" context="{'group_by': 'container_no'}" />
-                        <filter string="Forwarder" name="Forwarder" domain="[]" context="{'group_by': 'forwarder_no'}" />
-                        <filter string="Shipment Date" name="order_date" domain="[]" context="{'group_by': 'shipment_date'}" />
-                        <filter string="Scheduled Arrival" name="scheduled_arrival" domain="[]" context="{'group_by': 'scheduled_arrival'}" />
+                        <filter string="Container" name="Container" domain="[]" context="{'group_by': 'container_no'}"/>
+                        <filter string="Forwarder" name="Forwarder" domain="[]" context="{'group_by': 'forwarder_no'}"/>
+                        <filter string="Shipment Date" name="order_date" domain="[]"
+                                context="{'group_by': 'shipment_date'}"/>
+                        <filter string="Scheduled Arrival" name="scheduled_arrival" domain="[]"
+                                context="{'group_by': 'scheduled_arrival'}"/>
 
                     </group>
                 </search>
@@ -116,13 +129,14 @@
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">purchase.order.shipment</field>
             <field name="domain">[]</field>
-            <field name="search_view_id" ref="view_purchase_order_shipment_filter" />
+            <field name="search_view_id" ref="view_purchase_order_shipment_filter"/>
             <field name="view_mode">tree,form</field>
-            <field name="view_id" ref="purchase_order_shipment_view_tree" />
+            <field name="view_id" ref="purchase_order_shipment_view_tree"/>
         </record>
 
 
-        <menuitem action="purchase_order_shipment_action_generic" id="menu_purchase_shipment" parent="purchase.menu_procurement_management" sequence="12" />
+        <menuitem action="purchase_order_shipment_action_generic" id="menu_purchase_shipment"
+                  parent="purchase.menu_procurement_management" sequence="12"/>
 
 
     </data>
